implemented endpoints
- implemented CRUD endpoint for product entity
- created response and request classes
- added basic validation for request classes
