# src/main/java/com/example/cosmocatsintergalacticmarketplacebackend/web/ProductController.java
@@ -1,0 +1,52 @@
+package com.example.cosmocatsintergalacticmarketplacebackend.web;
+
+import com.example.cosmocatsintergalacticmarketplacebackend.domain.Product;
+import com.example.cosmocatsintergalacticmarketplacebackend.dto.product.ProductRequest;
+import com.example.cosmocatsintergalacticmarketplacebackend.dto.product.ProductResponse;
+import com.example.cosmocatsintergalacticmarketplacebackend.service.interfaces.IProductService;
+import com.example.cosmocatsintergalacticmarketplacebackend.web.mapping.ProductMapper;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+import java.util.UUID;
+
+@RestController
+@RequestMapping("/api/v1/products")
+@RequiredArgsConstructor
+public class ProductController {
+    private final IProductService productService;
+    private final ProductMapper productMapper;
+
+    @GetMapping
+    public ResponseEntity<List<ProductResponse>> getAllProducts() {
+        return ResponseEntity.ok(productMapper.toResponseList(productService.getAllProducts()));
+    }
+
+    @GetMapping("/{id}")
+    public ResponseEntity<ProductResponse> getProductById(@PathVariable UUID id) {
+        return productService.getProductById(id)
+                .map(productMapper::toResponse)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    @PostMapping
+    public Product createProduct(@RequestBody ProductRequest productDto) {
+        return productService.createProduct(productMapper.toProduct(productDto));
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<Product> updateProduct(@PathVariable UUID id, @RequestBody ProductRequest productDto) {
+        return productService.updateProduct(id, productMapper.toProduct(productDto))
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteProduct(@PathVariable UUID id) {
+        productService.deleteProduct(id);
+        return ResponseEntity.noContent().build();
+    }
+}
